syntax = "proto3";
option go_package = "github.com/viperadnan-git/gogpm/internal/pb";

// SetArchived is used to archive or unarchive media items
message SetArchived {
  repeated ArchivedItem items = 1;
  int64 field3 = 3; // constant: 1

  message ArchivedItem {
    string item_key = 1; // mediaKey or dedupKey (URL-safe base64 encoded SHA1 hash)
    ArchiveAction action = 2;
  }

  message ArchiveAction {
    int64 action = 1; // 1 = archive, 2 = unarchive
  }
}
